# lan-device-scanner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  scan.xml
frontend/: package-lock.json  package.json  scans.html
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/server/app/: page_client-reference-manifest.js
frontend/.next/dev/static/chunks/: [root-of-the-server]__0f0ba101._.css  [root-of-the-server]__0f0ba101._.css.map  _1a5321ab._.js  _1a5321ab._.js.map  _29907bdb._.js  _29907bdb._.js.map  _352d8809._.js  _352d8809._.js.map  _411c20cf._.js  _411c20cf._.js.map  _718a34f2._.js  _718a34f2._.js.map  _71f2bc1c._.js  _71f2bc1c._.js.map  _b7d4a5bb._.js  _b7d4a5bb._.js.map  _fd57872b._.js  _fd57872b._.js.map  _fea31806._.js  _fea31806._.js.map  node_modules_7f09fef0._.js.map  node_modules_@swc_helpers_cjs_d80fb378._.js.map  node_modules_next_app_72f3d36f.js.map  node_modules_next_error_1cfbb379.js.map  (+22 more)
frontend/.next/dev/types/: routes.d.ts  validator.ts
frontend/src/app/: page.tsx
frontend/src/app/scans/: page.tsx
frontend/src/components/: DeviceModal.tsx
image/: .dockerignore  Dockerfile
src/: LICENSE  main.py
src/api/: __init__.py  schemas.py
src/api/routers/: devices.py  scans.py
src/database/: __init__.py  crud.py  database.py  models.py
src/engine/: __init__.py  db_writer.py  device_guesser.py  scanner.py  types.py
(+156 files in other folders)
