[tool.poetry]
name = "device-scanner"
version = "0.1.0"
description = "A network device scanner API using FastAPI and SQLAlchemy"
authors = ["Shmaya Peskin <shmayaky@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
sqlalchemy = "*"
python-dotenv = "*"
netifaces = "*"
xmltodict = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
